# payyans

./: .gitignore  .travis.yml  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: test.yml
libindic/payyans/: __init__.py  core.py  expose.py  reader.py
libindic/payyans/maps/: karthika.map  panchari.map
libindic/payyans/templates/: libindic.payyans.html  payyans.html
libindic/payyans/tests/: test_payyans.py
payyans/: __init__.py  core.py
payyans/maps/: panchari.map  priyaank.map
payyans/templates/: payyans.html
